2013-09-30  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/library/bignum.c (mpi_is_prime): Enable trial divisions
	by small integers.
	Add Fermat primality test.
	(mpi_gen_prime): Limit random value so that two MSBs of result will
	be 0x11.

2013-09-27  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/include/polarssl/bignum.h (mpi_is_prime): ifdef-out.
	* polarssl/library/bignum.c (mpi_is_prime): It's now internal
	function, assuming we already know its coprime to small primes.
	(M): New constant MPI.  Multiply primes 2*...*691.
	(MAX_A): New constant MPI.  2^1024 / M - 1.
	(mpi_gen_prime): Specialize for 1024-bit, using Fouque-Tibouchi
	method.

2013-09-25  Niibe Yutaka  <gniibe@fsij.org>

	* src/sha256.h, src/adc.h
	* src/neug.c, src/adc_stm32f103.c: Update from NeuG 0.11.

	* chopstx: Upgrade to new Chopstx 0.00.

	* VERSION: New file.

	* src/configure (SERIALNO, SERIALNO_STR_LEN_DEFINE): New.
	(REVISION): Use the file VERSION if it doesn't have .git.
	Thanks to Sumedha Widyadharma for the bug report.

	* src/config.h.in (SERIALNO_STR_LEN_DEFINE): New.
	* src/main.c (ID_OFFSET): Use SERIALNO_STR_LEN.
	* src/usb_desc.c (gnukStringSerial): Remove.  It's now
	generated in usb-strings.c.inc.

	* src/ec_p256.c (compute_kP): Fix for impossible cases.
	(point_is_on_the_curve): New.
	(coefficient_a, coefficient_b): New.

2013-09-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/call-ec_p256.c (ecdsa_compute_public): Handle possible
	error (where key_data is the order).

	* src/ec_p256.c	(compute_kG, compute_kP): Handle errors.

	* src/jpc.c (jpc_to_ac): Return -1 on error.
	(jpc_add_ac_signed): Handle the case where A=inf.

	* src/modp256.c (modp256_inv): Handle error case.

	* src/bn.c (bn256_cmp): New.

2013-07-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.ld.in: Layout change following NeuG.
	(_end): Add alignment of 16.

	* src/neug.c, src/adc.h, src/adc_stm32f103.c: Update from NeuG.

	* src/main.c [DFU_SUPPORT] (main): Fix calling
	flash_erase_all_and_exec.
